updated seeds to have 20% reviews without media
