# routes/api.php
@@ -22,9 +22,9 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 // Ratings and Reviews API Routes
 Route::post('/reviews', [RatingAndReviewController::class, 'store']);
 Route::get('/reviews', [RatingAndReviewController::class, 'getReviewsByStatus']);
+Route::get('/reviews/counts', [RatingAndReviewController::class, 'getReviewCountsByStatus']);
 Route::get('/products/{id}/reviews', [RatingAndReviewController::class, 'getProductReviews']);
 Route::get('/products/{id}/rating', [RatingAndReviewController::class, 'getProductRatingSummary']);
 Route::delete('/reviews/{id}', [RatingAndReviewController::class, 'destroy']);
 Route::put('/reviews/{id}/publication', [RatingAndReviewController::class, 'updatePublicationStatus']);
 Route::get('/reviews/{id}/translate', [RatingAndReviewController::class, 'getTranslatedReview']);
-
